--- a/tasks/form1/formatcheck7.html
+++ b/tasks/form1/formatcheck7.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 <nav>
-    <heading><h4>Reference Documents</h4></heading>
+    <header><h4>Reference Documents</h4></header>
   <ul>
     <li>Source Document:<span itemprop="sourceOrganization">USFSP</span>&nbsp;<a href="http://www.registrar.usf.edu/ssearch/data/dept.php" itemprop="URL">OASIS Search</a></li>
     <li>Reference Document:<span itemprop="sourceOrganization">USF</span>&nbsp;<a href="http://ugs.usf.edu/course-inventory/" itemprop="URL"> Course Inventory</a></li>
