--- a/tasks/form1/formatcheck7.html
+++ b/tasks/form1/formatcheck7.html
@@ -555,7 +555,7 @@
             <li><a href="https://developers.google.com/structured-data/testing-tool/">Snippet Testing</a>&nbsp;all ok (9 Sept 2015)</li>
             <li><a href="http://goo.gl/c3SmW0">Tenon.io</a>&nbsp; Results for 10 Sept 2015</li>
             <li><a href="http://wave.webaim.org">WebAim WAVE</a>&nbsp; Results for testing 10 Sept 2015 WAVE has detected the following:0 Errors 0 Alerts 7 Features 16 Structural Elements9 HTML5 and ARIA 0 Contrast Errors</li>
-            <li><a href="https://validator.w3.org/mobile-alpha/">Mobile Testing Alpha:</a>&nbsp;Results for 10 Sept 2015: 3 HTTP requests. Favicon unnecessarily checked, to fix: Set up a favicon on the domain, or specific to the page; otherwise, use <link rel='icon' href='data:;base64,iVBORw0KGgo='>Link</a></li>
+            <li><a href="https://validator.w3.org/mobile-alpha/">Mobile Testing Alpha:</a>&nbsp;Results for 10 Sept 2015: 3 HTTP requests. Favicon unnecessarily checked, to fix: Set up a favicon on the domain, or specific to the page; otherwise, use <link rel="icon" href="data:;base64,iVBORw0KGgo=">Link</a></li>
         </ul>
    
   </aside>
