--- a/tasks/form1/formatcheck7.html
+++ b/tasks/form1/formatcheck7.html
@@ -24,8 +24,8 @@
 <nav itemscope itemtype="http://schema.org/Code">
     <header><h4>Reference Documents</h4></header>
   <ul>
-    <li>Source Document:<span itemprop="sourceOrganization">USFSP</span>&nbsp;<a href="http://www.registrar.usf.edu/ssearch/data/dept.php" itemprop="URL">OASIS Search</a></li>
-    <li>Reference Document:<span itemprop="sourceOrganization">USF</span>&nbsp;<a href="http://ugs.usf.edu/course-inventory/" itemprop="URL"> Course Inventory</a></li>
+    <li>Source Document:<span itemprop="sourceOrganization">USF</span>&nbsp;<a href="http://www.registrar.usf.edu/ssearch/data/dept.php" itemprop="URL">OASIS Search</a></li>
+    <li>Reference Document:<span itemprop="sourceOrganization">USF</span>&nbsp;<a href="http://ugs.usf.edu/course-inventory/" itemprop="URL">Course Inventory</a></li>
   </ul>
 </nav>
 
@@ -552,10 +552,10 @@
     
         <ul>
             <li><a href="https://html5.validator.nu/">HTML5 NuValidator</a>&nbsp;The document is valid HTML5 + ARIA + SVG 1.1 + MathML 2.0 </li>
-            <li><a href="https://developers.google.com/structured-data/testing-tool/">Snippet Testing</a>&nbsp;all ok (9 Sept 2015)</li>
-            <li><a href="http://goo.gl/c3SmW0">Tenon.io</a>&nbsp; Results for 10 Sept 2015</li>
-            <li><a href="http://wave.webaim.org">WebAim WAVE</a>&nbsp; Results for testing 10 Sept 2015 WAVE has detected the following:0 Errors 0 Alerts 7 Features 16 Structural Elements9 HTML5 and ARIA 0 Contrast Errors</li>
-            <li><a href="https://validator.w3.org/mobile-alpha/">Mobile Testing Alpha:</a>&nbsp;Results for 10 Sept 2015: 3 HTTP requests. Favicon unnecessarily checked, to fix: Set up a favicon on the domain, or specific to the page;</li>
+            <li><a href="https://developers.google.com/structured-data/testing-tool/">Snippet Testing</a>&nbsp;all ok (10 Sept 2015)</li>
+            <li><a href="http://goo.gl/oKjhGf">Tenon.io</a>&nbsp; Results for 10 Sept 2015 3:09pm</li>
+            <li><a href="http://wave.webaim.org">WebAim WAVE</a>&nbsp; Results for testing 10 Sept 2015 WAVE has detected the following:0 Errors 0 Alerts 7 Features 16 Structural Elements 9 HTML5 and ARIA 0 Contrast Errors</li>
+            <li><a href="https://validator.w3.org/mobile-alpha/">Mobile Testing Alpha:</a>&nbsp;Results for 10 Sept 2015: 3 HTTP requests. Favicon unnecessarily checked, to fix: Set up a favicon on the domain, or specific to the page</li>
         </ul>
    
   </aside>
