--- a/tasks/form1/formatcheck9.html
+++ b/tasks/form1/formatcheck9.html
@@ -587,11 +587,21 @@ has been granted. source: <a href="http://www.grad.usf.edu/inc/linked-files/grad
         <ul>
             <li><a href="https://html5.validator.nu/">HTML5 NuValidator</a>&nbsp;The document is valid HTML5 + ARIA + SVG 1.1 + MathML 2.0 </li>
             <li><a href="https://developers.google.com/structured-data/testing-tool/">Snippet Testing</a>&nbsp;all ok (11 Sept 2015)</li>
+            <li><a href="https://jigsaw.w3.org/css-validator/">CSS Validation</a>&nbsp; CSS Level Three </li>
             <li><a href="http://goo.gl/AoXkX1">Tenon.io</a>&nbsp; Results for 11 Sept 2015 10:56am</li>
             <li><a href="http://wave.webaim.org">WebAim WAVE</a>&nbsp; Results for testing 11 Sept 2015 Alert that pdf file needs proper handling</li>
             <li><a href="https://validator.w3.org/mobile-alpha/">Mobile Testing Alpha:</a>&nbsp;Results for 11 Sept 2015: 3 HTTP requests. Favicon unnecessarily checked, to fix: Set up a favicon on the domain, or specific to the page</li>
         </ul>
   </footer>
+  <aside>
+    <p>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+            alt="Valid CSS!" />
+    </a>
+</p>
+  </aside>
   
   
 <script>
