--- a/tasks/form1/formatcheck9.html
+++ b/tasks/form1/formatcheck9.html
@@ -564,11 +564,11 @@
       </ul>
   </aside>
   
-  <footer itemscope itemtype="http://schema.org/Organization">
+  <footer itemscope itemtype="http://schema.org/sourceOrganization">
     <h4>References</h4>
       <ul>
-        <li>Source Document:<span itemprop="sourceOrganization">USF</span>&nbsp;<a href="http://www.registrar.usf.edu/ssearch/data/dept.php" itemprop="URL">OASIS Search</a></li>
-        <li>Reference Document:<span itemprop="sourceOrganization">USF</span>&nbsp;<a href="http://ugs.usf.edu/course-inventory/" itemprop="URL">USF System Course Inventory</a><br />
+        <li>Source Document:<span itemprop="Organization">USF</span>&nbsp;<a href="http://www.registrar.usf.edu/ssearch/data/dept.php" itemprop="URL">OASIS Search</a></li>
+        <li>Reference Document:<span itemprop="Organization">USF</span>&nbsp;<a href="http://ugs.usf.edu/course-inventory/" itemprop="URL">USF System Course Inventory</a><br />
         Note: BDMS database. BDMS is an additional feature that must be added after the BANNER access
 has been granted. source: <a href="http://www.grad.usf.edu/inc/linked-files/grad-adm-manual.pdf">http://www.grad.usf.edu/inc/linked-files/grad-adm-manual.pdf [.pdf]</a></li>
     
