--- a/tasks/form1/formatcheck9.html
+++ b/tasks/form1/formatcheck9.html
@@ -564,7 +564,7 @@
       </ul>
   </aside>
   
-  <footer itemscope itemtype="http://schema.org/sourceOrganization">
+  <footer itemscope itemtype="http://schema.org/Organization">
     <h4>References</h4>
       <ul>
         <li>Source Document:<span itemprop="Organization">USF</span>&nbsp;<a href="http://www.registrar.usf.edu/ssearch/data/dept.php" itemprop="URL">OASIS Search</a></li>
