--- a/tasks/form1/formatcheck9.html
+++ b/tasks/form1/formatcheck9.html
@@ -567,14 +567,14 @@
   <footer itemscope itemtype="http://schema.org/Organization">
     <h4>References</h4>
       <ul>
-        <li>Source Document:<span itemprop="Organization">USF</span>&nbsp;<a href="http://www.registrar.usf.edu/ssearch/data/dept.php" itemprop="URL">OASIS Search</a></li>
-        <li>Reference Document:<span itemprop="Organization">USF</span>&nbsp;<a href="http://ugs.usf.edu/course-inventory/" itemprop="URL">USF System Course Inventory</a><br />
+        <li>Source Document:<span itemprop="location">USF</span>&nbsp;<a href="http://www.registrar.usf.edu/ssearch/data/dept.php" itemprop="URL">OASIS Search</a></li>
+        <li>Reference Document:<span itemprop="location">USF</span>&nbsp;<a href="http://ugs.usf.edu/course-inventory/" itemprop="URL">USF System Course Inventory</a><br />
         Note: BDMS database. BDMS is an additional feature that must be added after the BANNER access
 has been granted. source: <a href="http://www.grad.usf.edu/inc/linked-files/grad-adm-manual.pdf">http://www.grad.usf.edu/inc/linked-files/grad-adm-manual.pdf [.pdf]</a></li>
     
-        <li>Source Document:<span itemprop="sourceOrganization">ellucian</span>&nbsp;<a href="http://www.ellucian.com/document-management-software/" itemprop="URL">BDMS</a></li>
-        <li>Reference Document:<span itemprop="sourceOrganization">USFSP</span>&nbsp;<a href="http://www.usfsp.edu/catalog-undergrad/courses-to-satisfy-gordon-rule.htm" itemprop="URL">USFSP Gordon Rule Requirements</a></li>
-        <li>Reference Document:<span itemprop="sourceOrganization">USFSP</span>&nbsp;<a href="http://www.usfsp.edu/catalog-undergrad/undergraduate-programs-offered.htm" itemprop="URL">USFSP UnderGraduate Requirements</a><br />
+        <li>Source Document:<span itemprop="location">ellucian</span>&nbsp;<a href="http://www.ellucian.com/document-management-software/" itemprop="URL">BDMS</a></li>
+        <li>Reference Document:<span itemprop="location">USFSP</span>&nbsp;<a href="http://www.usfsp.edu/catalog-undergrad/courses-to-satisfy-gordon-rule.htm" itemprop="URL">USFSP Gordon Rule Requirements</a></li>
+        <li>Reference Document:<span itemprop="location">USFSP</span>&nbsp;<a href="http://www.usfsp.edu/catalog-undergrad/undergraduate-programs-offered.htm" itemprop="URL">USFSP UnderGraduate Requirements</a><br />
         Note: BFA - Bachelor of Fine Arts -- for Graphic Design -- is listed on this page, but not on OASIS page
         </li>
     </ul>
