--- a/tasks/form1/formatcheck9.html
+++ b/tasks/form1/formatcheck9.html
@@ -572,7 +572,7 @@
         Note: BDMS database. BDMS is an additional feature that must be added after the BANNER access
 has been granted. source: <a href="http://www.grad.usf.edu/inc/linked-files/grad-adm-manual.pdf">http://www.grad.usf.edu/inc/linked-files/grad-adm-manual.pdf [.pdf]</a></li>
     
-        <li>Source Document:<span itemprop="availableAtOrFrom">ellucian</span>&nbsp;<a href="http://www.ellucian.com/document-management-software/" itemprop="URL">BDMS</a></li>
+        <li>Source Document:<span itemprop="hasPOS">ellucian</span>&nbsp;<a href="http://www.ellucian.com/document-management-software/" itemprop="URL">BDMS</a></li>
         <li>Reference Document:<span itemprop="location">USFSP</span>&nbsp;<a href="http://www.usfsp.edu/catalog-undergrad/courses-to-satisfy-gordon-rule.htm" itemprop="URL">USFSP Gordon Rule Requirements</a></li>
         <li>Reference Document:<span itemprop="location">USFSP</span>&nbsp;<a href="http://www.usfsp.edu/catalog-undergrad/undergraduate-programs-offered.htm" itemprop="URL">USFSP UnderGraduate Requirements</a><br />
         Note: BFA - Bachelor of Fine Arts -- for Graphic Design -- is listed on this page, but not on OASIS page
