--- a/tasks/form1/formatcheck9.html
+++ b/tasks/form1/formatcheck9.html
@@ -586,7 +586,7 @@ has been granted. source: <a href="http://www.grad.usf.edu/inc/linked-files/grad
    
         <ul>
             <li><a href="https://html5.validator.nu/">HTML5 NuValidator</a>&nbsp;The document is valid HTML5 + ARIA + SVG 1.1 + MathML 2.0 </li>
-            <li><a href="https://developers.google.com/structured-data/testing-tool/">Snippet Testing</a>&nbsp;all ok (11 Sept 2015)</li>
+            <li><a href="https://developers.google.com/structured-data/testing-tool/">Snippet Testing</a>&nbsp;<a href="https://developers.google.com/structured-data/testing-tool?url=https%253A%252F%252Fcook-my-catch.github.io%252Ftasks%252Fform1%252Fformatcheck9.html">all ok</a></li>
             <li><a href="http://jigsaw.w3.org/css-validator/">CSS Validation</a>&nbsp; CSS Level Three </li>
             <li><a href="http://goo.gl/AoXkX1">Tenon.io</a>&nbsp; Results for 11 Sept 2015 10:56am</li>
             <li><a href="http://wave.webaim.org">WebAim WAVE</a>&nbsp; Results for testing 11 Sept 2015 Alert that pdf file needs proper handling</li>
