--- a/tasks/form1/formatcheck9.html
+++ b/tasks/form1/formatcheck9.html
@@ -569,9 +569,7 @@
       <ul>
         <li>Source Document:<span itemprop="location">USF</span>&nbsp;<a href="http://www.registrar.usf.edu/ssearch/data/dept.php" itemprop="URL">OASIS Search</a></li>
         <li>Reference Document:<span itemprop="location">USF</span>&nbsp;<a href="http://ugs.usf.edu/course-inventory/" itemprop="URL">USF System Course Inventory</a><br />
-        Note: BDMS database. BDMS is an additional feature that must be added after the BANNER access
-has been granted. source: <a href="http://www.grad.usf.edu/inc/linked-files/grad-adm-manual.pdf">http://www.grad.usf.edu/inc/linked-files/grad-adm-manual.pdf [.pdf]</a></li>
-    
+        Note: BDMS database. <a href="http://www.grad.usf.edu/inc/linked-files/grad-adm-manual.pdf">grad-adm-manual.pdf [.pdf]</a></li>
         <li>Source Document:<span itemprop="hasPOS">ellucian</span>&nbsp;<a href="http://www.ellucian.com/document-management-software/" itemprop="URL">BDMS</a></li>
         <li>Reference Document:<span itemprop="location">USFSP</span>&nbsp;<a href="http://www.usfsp.edu/catalog-undergrad/courses-to-satisfy-gordon-rule.htm" itemprop="URL">USFSP Gordon Rule Requirements</a></li>
         <li>Reference Document:<span itemprop="location">USFSP</span>&nbsp;<a href="http://www.usfsp.edu/catalog-undergrad/undergraduate-programs-offered.htm" itemprop="URL">USFSP UnderGraduate Requirements</a><br />
