--- a/tasks/form1/formatcheck10.html
+++ b/tasks/form1/formatcheck10.html
@@ -551,8 +551,9 @@
      <!-- </form> -->
     </section>
     <section><header><h3>Section Four: Courses</h3></header>
-      <ul><li>TBD</li></ul>
-      <p><h4>Test Results using code from <a href="https://api.jquery.com/serializeArray/">: JQuery Documentation for .serializeArray()</a></h4><br /> <span id="results"></span></p>
+      <ul>
+      <li><h4>Test Results using code from <a href="https://api.jquery.com/serializeArray/">: JQuery Documentation for .serializeArray()</a></h4></li>
+      <li><span id="results">Test Results<br /></span></li>
     </section>
 </form>
   </article>
