--- a/dataattribute/baseline8c.html
+++ b/dataattribute/baseline8c.html
@@ -31,7 +31,7 @@
         <li><a href="http://stackoverflow.com/questions/4146502/jquery-selectors-on-custom-data-attributes-using-html5">Stack Exchange Article 1 </a></li>
         <li><a href="http://stackoverflow.com/questions/6827810/unable-to-set-data-attribute-using-jquery-data-api">Stack Exchange Article 2 </a></li>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Forms/How_to_structure_an_HTML_form">HTML5 Output</a></li>
-        
+        <li><a href="http://ejohn.org/apps/workshop/adv-talk/#14">Things not known about Jquery</a></li>
     </ul>
 </nav>
 
