--- a/tasks/form1a/formatcheck1.html
+++ b/tasks/form1a/formatcheck1.html
@@ -23,7 +23,7 @@
     <ul>
         <li><a href="http://api.jquery.com/prop/">JQuery .prop() method</a></li>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Forms/How_to_structure_an_HTML_form">HTML5 Output</a></li>
-        <li><h5>Note: Firefox will, unlike other browsers, by default, persist the dynamic checked state of an <input> across page loads. Use the autocomplete attribute to control this feature.<br />Souce: <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input#attr-checked">https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input#attr-checked </a></h5></li>
+        <li><h5>Note: Firefox will, unlike other browsers, by default, persist the dynamic checked state of an input across page loads. Use the autocomplete attribute to control this feature.<br />Souce: <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input#attr-checked">https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input#attr-checked </a></h5></li>
     </ul>
 </nav>
 
