--- a/tasks/form1a/formatcheck3.html
+++ b/tasks/form1a/formatcheck3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
 <!-- <link rel='icon' href='data:;base64,iVBORw0KGgo='> -->
- <title property="name">Baseline Event Handler1</title>
+ <title property="name">Baseline Event Handler1 With Select</title>
  <meta name="viewport" content="width-device-widht, initial-scale=1">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <!--below added for autocomplete -->
