--- a/tasks/form1a/formatcheck3.html
+++ b/tasks/form1a/formatcheck3.html
@@ -662,7 +662,7 @@
             }
         });
 
-        var pickc = [ "Architecture & Community Design", "Applied Arts and New Media", "Arts & Sciences", "Behavioral and Community Sciences", "Business", "College of the Arts", "Education", "Engineering", "FMHI: de la Parte Florida Mental Health Institute", "Global Sustainability", "Graduate School", "Honors College", "  Hosp & Tourism Leadership", "Hotel & Rest Mgt", "Hotel & Tech Leadership", "Human and Social Sciences",  "Medicine", "  Public Health", "Technology and Innovation ",  "Undergraduate Studies",   "", "Last College Name"];
+        var pickc = [ "Architecture & Community Design", "Applied Arts and New Media", "Arts & Sciences", "Behavioral and Community Sciences", "Business", "College of the Arts", "Education", "Engineering", "FMHI: de la Parte Florida Mental Health Institute", "Global Sustainability", "Graduate School", "Honors College", "  Hosp & Tourism Leadership", "Hotel & Rest Mgt", "Hotel & Tech Leadership", "Human and Social Sciences",  "Medicine", "  Public Health", "Technology and Innovation ",  "Undergraduate Studies"];
 
         
         $( "#autocollege" ).autocomplete({
