--- a/tasks/form1a/formatcheck4.html
+++ b/tasks/form1a/formatcheck4.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
 <!-- <link rel='icon' href='data:;base64,iVBORw0KGgo='> -->
  <title property="name">Baseline Event Handler1 With Select</title>
- <meta name="viewport" content="width-device-width, initial-scale=1">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <!--below added for autocomplete -->
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
