--- a/tasks/form1a/formatcheck7.html
+++ b/tasks/form1a/formatcheck7.html
@@ -35,14 +35,14 @@
     <h2>This Page Is Under Development</h2>
     <div id="results"></div>
         <form  autocomplete="off">
-    <section>
+    <section itemprop="publisher" itemscope="" itemtype="http://schema.org/CollegeOrUniversity">
 
       <header><h3>Section One: Institutions</h3></header>
         <fieldset id="institution-step">
                 <legend>Which Institution Do You Wish to Attend?</legend>
                     
                     <ul style="list-style:none;">
-                        <li><input type="checkbox" name="USF" value="USF" id="i-tampa"><label for="i-tampa">USF</label></li>
+                        <li><input type="checkbox" name="USF" value="USF" id="i-tampa"><label for="i-tampa"><span itemprop="name">USF</span></label></li>
                         <li><input type="checkbox" name="USFSP" value="USFSP" id="i-stpete"><label for="i-stpete">USF St. Petersburg</label></li>
                         <li><input type="checkbox" name="USFSM" value="USFSM" id="i-sarasota"><label for="i-sarasota">USF Sarasota-Manatee</label></li>
                         <li><input type="checkbox" name="Other" value="Other" id="i-other"><label for="i-other">Other</label></li>
