--- a/tasks/form1a/formatcheck7.html
+++ b/tasks/form1a/formatcheck7.html
@@ -98,7 +98,7 @@
 
            </fieldset>
     </section>
-    <section>
+    <section itemprop="publisher" itemscope="" itemtype="http://schema.org/CollegeOrUniversity">
       <header><h3>Section Three: Departments</h3></header>
         <!--note for department section, use three digit code. For college section use two digit code -->
       <fieldset id="department-step">
